--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <plugins>
       <plugin>
             <artifactId>maven-deploy-plugin</artifactId>
-            <version>3.0.0-M1</version>
+            <version>3.5.0</version>
             <configuration>
               <deployAtEnd>true</deployAtEnd>
             </configuration>
